--- a/i.css
+++ b/i.css
@@ -50,7 +50,7 @@ html, body{
     position: absolute;
     bottom: -2rem;
     top: 0.5rem; 
-    color: #ffff;
+    color:  #32404D;
     display: none;
     right: 1rem;
     cursor: pointer;
