--- a/i.css
+++ b/i.css
@@ -18,7 +18,7 @@ html, body{
     box-sizing: border-box;
 }
 body {
-    background: url('img/b1.png') no-repeat center center fixed;
+    background: wheat;
     background-size: cover;
   }
 .header{
@@ -58,17 +58,19 @@ body {
     display: none;
     right: 1rem;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
+
 .menu {
-        position: absolute;
-        bottom: 30.5em;
-        margin-left: 18em;
-        justify-content: space-between;
-        display: flex;
-        gap: 20px;
-        width: 100%; 
-        padding: 0 20px;
-         
+    position: absolute;
+    bottom: 26.5em;
+    justify-content: space-between;
+    display: flex;
+    gap: 20%;
+    width: 100%; 
+    padding: 0 20px;
+    background-color: #6E4E37;
+     
 }
     
 .menu-list{
@@ -92,10 +94,10 @@ body {
 
 }
 
-  .menu ul {
+.menu ul {
     list-style: none;
     padding: 20px;
-    gap: 35%;
+    gap: 60%;
   
   }
   
@@ -208,11 +210,51 @@ body {
     }
 }
 
-/*intro advert section starts here*/
+.submenu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    display: none;
+    min-width: 200px;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+.hovermenu:hover .submenu {
+    display: block;
+}
+
+.submenu li {
+    padding: 10px 15px;
+    white-space: nowrap;
+    display: flex;
+    gap: 10px;
+}
+.submenu li span.material-symbols-outlined {
+    margin-right: 10px;
+    font-size: 20px;
+    color: #32404d; 
+}
+
+.submenu li:hover {
+    background: #f5f5f5; 
+}
+
+
+
+
+
+/*body content & intro advert section starts here*/
 .intro-section{
     display: flex; 
     align-items: center;
     justify-content: space-between;
+    margin-top: 7%;
     
 }
 .intro-video{
@@ -255,18 +297,18 @@ body {
     align-items: center;     
     height: 0vh;
     text-align: center;
-    margin-top: 30%;  
-     margin-bottom: 20%; 
+    margin-top: 20%;  
+     margin-bottom: 10%; 
 }
 
 .text1-header h1 {
-    font-size: 7rem;  
+    font-size: 3rem;  
     font-weight: bold;
 }
 
 .whychooseUs-section{
     display: grid; 
-    grid-template-columns: repeat(2, minmax(300px, 1fr)); 
+    grid-template-columns: repeat(3, minmax(250px, 1fr)); 
     gap: 20px;
     padding: 40px;
 }
@@ -286,8 +328,13 @@ body {
  
     
 }
+.whychooseUs-section div:nth-child(10){
+   align-self: center;
+  position: relative;
+  left: 100%;
+}
 .whychooseUs-section div h1{
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #6E4E37;
 }
 
@@ -327,46 +374,12 @@ body {
 
 
 
-.submenu {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background: white;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    display: none;
-    min-width: 200px;
-    border-radius: 5px;
-    z-index: 1000;
-}
-
-.hovermenu:hover .submenu {
-    display: block;
-}
-
-.submenu li {
-    padding: 10px 15px;
-    white-space: nowrap;
-    display: flex;
-    gap: 10px;
-}
-.submenu li span.material-symbols-outlined {
-    margin-right: 10px;
-    font-size: 20px;
-    color: #32404d; 
-}
-
-.submenu li:hover {
-    background: #f5f5f5; 
-}
 
 .Manage-flexible-plans{
     display: grid; 
     grid-template-columns: repeat(2, minmax(300px, 1fr)); 
     gap: 30px;
-    padding: 40px;
+    padding: 10px;
    
     
 
@@ -387,7 +400,7 @@ body {
     border-radius: 10px;
 }
 .Manage-flexible-plans  div h2{
-    font-size: 2rem;
+    font-size: 1.5rem;
     letter-spacing: 2px
 
 }
@@ -418,8 +431,9 @@ body {
 
 .reviews-head-text{
     display: flex;
-    padding-left: 7%;
-     font-size: 2.5rem;
+    padding-left: 15%;
+    font-size: 1.5rem;
+    letter-spacing: 3px;
     margin: 0px;
     margin-bottom: -8rem;
     background-color: #b2c1cf;
@@ -431,6 +445,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     margin: 20px 0;
+    background-color: #b2c1cf;
 }
 
 
@@ -527,7 +542,7 @@ color: #fff;
 
     }
     .text1-header h1{
-        font-size: 5rem;
+        font-size: 2.5rem;
     }
     .sidebar {
         text-align: start;
@@ -537,10 +552,13 @@ color: #fff;
         display: block;
     }
     .reviews-head-text{
-        font-size: 2rem;
+        font-size: 1.5rem;
         margin-top: 0%;
         padding-left: 8%;
          
+    }
+    .whychooseUs-section {
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
     }
     #hamburger{
         bottom: -1.5rem; 
@@ -549,6 +567,9 @@ color: #fff;
         display: flex;
         top: 0.1rem;
        
+    }
+    .intro-section {
+          margin-top: 0%;
     }
  
 
@@ -578,7 +599,7 @@ color: #fff;
         grid-template-columns: repeat(1, minmax(290px, 1fr));
     }
     .text1-header h1{
-        font-size: 3.8rem;
+        font-size: 2.2rem;
     }
     .menu{
         display: none;
@@ -592,8 +613,8 @@ color: #fff;
     }
     .intro-section {
         flex-direction:column;
+          margin-top: 0%;
     }
-
     .intro-video video {
         width: 100%;
         height: auto;
@@ -682,7 +703,7 @@ color: #fff;
          display: flex;
     }
     .text1-header h1{
-        font-size: 3.2rem;
+        font-size: 2rem;
        
     }
     .whychooseUs-section {
@@ -715,8 +736,8 @@ color: #fff;
     }
     .intro-section {
         flex-direction:column;
+          margin-top: 0%;
     }
-
     .intro-video video {
         width: 100%;
         height: auto;
@@ -813,7 +834,7 @@ color: #fff;
    
 }
 .text1-header h1{
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   
 }
 .whychooseUs-section {
@@ -862,6 +883,7 @@ color: #fff;
 }
 .intro-section {
     flex-direction:column;
+      margin-top: 0%;
 }
 
 .intro-video video {
@@ -961,7 +983,7 @@ color: #fff;
      
   }
   .text1-header h1{
-      font-size: 1.8rem;
+      font-size: 1.5rem;
     
   }
   .whychooseUs-section {
@@ -1011,6 +1033,7 @@ color: #fff;
 
   .intro-section {
       flex-direction:column;
+        margin-top: 0%;
   }
   
   .intro-video video {
@@ -1091,6 +1114,7 @@ color: #fff;
     font-size: 1rem;
     margin-top: 0%;
     padding-left: 10%;
+    letter-spacing: 0px;
     
      
 }
